add complete java 8 collection with stream-api